cmake_minimum_required (VERSION 3.5)
project (Bowling)
add_subdirectory (includes)
add_subdirectory (src)
add_subdirectory (test)
enable_testing ()
add_test (NAME BowlingUtilsTests COMMAND UtilsTest)
add_test (NAME BowlingFrameTests COMMAND FrameTest)
add_test (NAME BowlingGameTests COMMAND GameTest)
add_test (NAME BowlingPlayerTests COMMAND PlayerTest)
add_test (NAME BowlingLaneTests COMMAND LaneTest)
