find_package (Boost COMPONENTS unit_test_framework REQUIRED)
set (CMAKE_CXX_STANDARD 17)
add_compile_definitions(UNIT_TEST)
include_directories (../includes)
add_executable (UtilsTest ../includes/Utils.h ../src/Utils.cpp UtilsTest.cpp)
add_executable (FrameTest ../includes/Utils.h ../src/Utils.cpp ../includes/Frame.h ../src/Frame.cpp FrameTest.cpp)
add_executable (GameTest ../includes/Utils.h ../src/Utils.cpp ../includes/Frame.h ../src/Frame.cpp ../includes/Game.h ../src/Game.cpp GameTest.cpp)
add_executable (PlayerTest ../includes/Utils.h ../src/Utils.cpp ../includes/Frame.h ../src/Frame.cpp ../includes/Game.h ../src/Game.cpp ../includes/Player.h ../src/Player.cpp PlayerTest.cpp)
add_executable (LaneTest ../includes/Utils.h ../src/Utils.cpp ../includes/Frame.h ../src/Frame.cpp ../includes/Game.h ../src/Game.cpp ../includes/Player.h ../src/Player.cpp ../includes/Lane.h ../src/Lane.cpp LaneTest.cpp)
target_link_libraries (UtilsTest)
target_link_libraries (FrameTest)
target_link_libraries (GameTest)
target_link_libraries (PlayerTest)
target_link_libraries (LaneTest)
